--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>angular-chart.js</artifactId>
-    <version>0.7.1</version>
+    <version>0.7.2-SNAPSHOT</version>
     <name>angular-chart.js</name>
     <description>WebJar for angular-chart.js</description>
     <url>http://webjars.org</url>
@@ -53,7 +53,7 @@
         <url>http://github.com/webjars/angular-chart.js</url>
         <connection>scm:git:https://github.com/webjars/angular-chart.js.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/angular-chart.js.git</developerConnection>
-        <tag>angular-chart.js-0.7.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
